# python_dmtx

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  dtmx_encode.sip  project.py  pydtmx.py  pyproject.toml  requirements.txt
core/: core.sip  project.py  pyproject.toml
dtmx/: dtmx.sip
extras/: extras.sip  pydmtx_creator.py  pyproject.toml
