# Specify sip v6 as the build system for the package.
[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

[project]
name = "pydtmx"
version = "0.1"
license = "MIT"
dependencies = ["dtmx"]

[tool.sip.bindings.pydtmx]

[tool.sip.bindings.dtmx]
headers= [dtmx.h]
include-dirs = [dtmx/libdmtx]
libraries  = ["dtmx"]
library-dirs = [dtmx/libdmtx]