# Specify sip v6 as the build system for the package.
[build-system]
requires = ["sip >=6, <7"]
build-backend = "sipbuild.api"

[project]
name = "pydmtx-core"

[tool.sip.bindings.core]
library-dirs = ["build"]
include-dirs = ["libdmtx"]
libraries = ["libdmtx"]
headers = ["dmtx.h", "dmtxstatic.h"]

[tool.sip.project]
sip-module = "pydmtx.sip"
dunder-init = true